--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "@twa-dev/sdk": "^8.0.2",
+    "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.14",
     "vite-svg-loader": "^5.1.0",
