--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twa-dev/sdk": "^8.0.2",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.22",
