--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@adsgram/vue": "^1.0.2",
     "@tailwindcss/vite": "^4.1.14",
     "@twa-dev/sdk": "^8.0.2",
     "axios": "^1.12.2",
