--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@twa-dev/sdk": "^8.0.2",
     "axios": "^1.12.2",
+    "monetag-tg-sdk": "^1.0.1",
     "pinia": "^3.0.3",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
